# Team19CustomUtilsLib

./: LICENSE  README.md  pyproject.toml  setup.py
Lib/src/Team19CustomUtils/: images.py
src/Team19CustomUtils/: generalUtils.py  imageUtils.py  images.py
src/Team_19_Custom_Utils_Lib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
