[project]
name = "Team_19_Custom_Utils_Lib"
version = "0.0.10"
authors = [
  { name="Mark Sheng", email="marksheng2020@example.com" },
]
description = "Custom package for ENGR 133 team 19, Fall 2025 semester"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/someone225/School-work"
Issues = "https://github.com/someone225/School-work/issues"